# sp500-pca-ml

./: .gitignore  README.md  main.py  pyproject.toml
app/: Home.py
app/pages/: 1_SandP500_Overview.py  2_PCA_SandP500.py
data/processed/: sandpdata.csv  stock_date_top10_2023-04-30_2025-05-22.csv
notebooks/: pca_test.ipynb
sp500_pca_ml/: data_cleaning.py  data_download.py  paths.py  pca_analysis.py  utils.py  visualizations.py
