[project]
name = "sp500-pca-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "scikit-learn>=1.7.2",
    "selenium>=4.41.0",
    "streamlit>=1.55.0",
    "yfinance>=1.2.0",
]
